<resources>
    <string name="app_name">AndroidAssignments</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\'m a button!</string>
    <string name="LG">Login</string>
    <string name="pass">Password</string>
    <string name="login"> Login</string>
    <string name="dialog_message">Do you want to exit the acitvity?</string>
    <string name="dialog_title">alert box</string>
    <string name="ok">YES</string>
    <string name="cancel">NO</string>
    <string name="ON">SWITCH IS ON</string>
    <string name="OFF">SWITCH IS OFF</string>
    <string name="validate_email">Not valid Email and password</string>
    <string name="back">Back</string>
    <string name="startchat">Start Chat</string>
    <string name="sendbutton">Send</string>
    <string name="ChatWindow">Chat Window</string>
    <string name="entertext">Enter Text</string>
    <string name="enterpass">Enter Password</string>
    <string name="entermail">Enter Email</string>
    <string name="testoolbar">Test Toolbar</string>
    <string name="lettericon">You clicked on letter icon</string>
    <string name="toolbar_alert">Do you want to go back?</string>
    <string name="weatherforecast">Weather Forecast</string>
</resources>